<?xml version="1.0" encoding="utf-8"?>

<!--Linear Layout - linijinis isdestymas-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="serif-monospace"
        android:text="@string/app_vardas"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/usernametext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/login_username"
        android:paddingBottom="25dp" />

    <EditText
        android:id="@+id/passwordtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginTop="15dp"
        android:hint="@string/login_password"
        android:paddingBottom="25dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_checkbox" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/login"
            android:text="@string/login_login_btn" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@color/register"
            android:text="@string/login_register_btn" />

    </LinearLayout>

</LinearLayout>